--- a/.env.prod
+++ b/.env.prod
@@ -28,9 +28,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=sendmail
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
+MAIL_PORT=587
 MAIL_USERNAME=alliswell.co.ltd@gmail.com
 MAIL_PASSWORD=aeoqlsadgzhoglzi
 MAIL_ENCRYPTION=ssl
